[workspace]
resolver = "2"

members = [
	#"bin/node-template/node",
	#"bin/node-template/pallets/template",
	#"bin/node-template/runtime",
	#"bin/node/bench",
	#"bin/node/cli",
	#"bin/node/test-runner-example",
	#"bin/node/executor",
	#"bin/node/primitives",
	#"bin/node/rpc",
	#"bin/node/rpc-client",
	#"bin/node/runtime",
	#"bin/node/testing",
	#"bin/utils/chain-spec-builder",
	#"bin/utils/subkey",
	"client/api",
	"client/authority-discovery",
	"client/basic-authorship",
	"client/beefy",
	"client/beefy/rpc",
	"client/block-builder",
	"client/chain-spec",
	"client/chain-spec/derive",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/epochs",
	"client/consensus/pow",
	"client/consensus/slots",
	"client/consensus/uncles",
	"client/db",
	"client/executor",
	"client/executor/common",
	"client/executor/runtime-test",
	"client/executor/wasmi",
	"client/executor/wasmtime",
	"client/finality-grandpa",
	"client/informant",
	"client/keystore",
	"client/light",
	"client/network",
	"client/network-gossip",
	"client/network/test",
	"client/offchain",
	"client/peerset",
	"client/allocator",
	"client/proposer-metrics",
	"client/rpc",
	"client/rpc-api",
	"client/rpc-servers",
	"client/service",
	"client/service/test",
	"client/state-db",
	"client/telemetry",
	"client/tracing",
	"client/tracing/proc-macro",
	"client/transaction-pool",
	"client/transaction-pool/api",
	"client/utils",
	"frame/assets",
	"frame/atomic-swap",
	"frame/aura",
	"frame/authority-discovery",
	"frame/authorship",
	"frame/babe",
	"frame/balances",
	"frame/beefy",
	"frame/beefy-mmr",
	"frame/beefy-mmr/primitives",
	"frame/benchmarking",
	"frame/bounties",
	"frame/collective",
	"frame/contracts",
	"frame/contracts/rpc",
	"frame/contracts/rpc/runtime-api",
	"frame/democracy",
	"frame/try-runtime",
	"frame/elections",
	"frame/election-provider-multi-phase",
	"frame/election-provider-support",
	"frame/example",
	"frame/example-offchain-worker",
	"frame/example-parallel",
	"frame/executive",
	"frame/gilt",
	"frame/grandpa",
	"frame/identity",
	"frame/im-online",
	"frame/indices",
	"frame/lottery",
	"frame/membership",
	"frame/merkle-mountain-range",
	"frame/merkle-mountain-range/primitives",
	"frame/merkle-mountain-range/rpc",
	"frame/multisig",
	"frame/nicks",
	"frame/node-authorization",
	"frame/offences",
	"frame/proxy",
	"frame/randomness-collective-flip",
	"frame/recovery",
	"frame/scheduler",
	"frame/scored-pool",
	"frame/session",
	"frame/session/benchmarking",
	"frame/society",
	"frame/staking",
	"frame/staking/reward-curve",
	"frame/staking/reward-fn",
	"frame/sudo",
	"frame/support",
	"frame/support/procedural",
	"frame/support/procedural/tools",
	"frame/support/procedural/tools/derive",
	"frame/support/test",
	"frame/system",
	"frame/system/benchmarking",
	"frame/system/rpc/runtime-api",
	"frame/timestamp",
	"frame/transaction-payment",
	"frame/transaction-payment/rpc",
	"frame/transaction-payment/rpc/runtime-api",
	"frame/transaction-storage",
	"frame/treasury",
	"frame/tips",
	"frame/uniques",
	"frame/utility",
	"frame/vesting",
	"frame/bags-list",
	"primitives/api",
	"primitives/api/proc-macro",
	"primitives/api/test",
	"primitives/application-crypto",
	"primitives/application-crypto/test",
	"primitives/arithmetic",
	"primitives/arithmetic/fuzzer",
	"primitives/authority-discovery",
	"primitives/authorship",
	"primitives/beefy",
	"primitives/block-builder",
	"primitives/blockchain",
	"primitives/consensus/aura",
	"primitives/consensus/babe",
	"primitives/consensus/common",
	"primitives/consensus/pow",
	"primitives/consensus/vrf",
	"primitives/core",
	"primitives/database",
	"primitives/debug-derive",
	"primitives/externalities",
	"primitives/extrinsic-info-runtime-api",
	"primitives/finality-grandpa",
	"primitives/inherents",
	"primitives/io",
	"primitives/keyring",
	"primitives/keystore",
	"primitives/maybe-compressed-blob",
	"primitives/npos-elections",
	"primitives/npos-elections/solution-type",
	"primitives/npos-elections/fuzzer",
	"primitives/offchain",
	"primitives/panic-handler",
	"primitives/rpc",
	"primitives/runtime",
	"primitives/runtime-interface",
	"primitives/runtime-interface/proc-macro",
	"primitives/runtime-interface/test",
	"primitives/runtime-interface/test-wasm",
	"primitives/runtime-interface/test-wasm-deprecated",
	"primitives/sandbox",
	"primitives/serializer",
	"primitives/session",
	"primitives/shuffler",
	"primitives/staking",
	"primitives/state-machine",
	"primitives/std",
	"primitives/storage",
	"primitives/tasks",
	"primitives/test-primitives",
	"primitives/timestamp",
	"primitives/tracing",
	"primitives/transaction-pool",
	"primitives/transaction-storage-proof",
	"primitives/trie",
	"primitives/version",
	"primitives/ver",
	"primitives/version/proc-macro",
	"primitives/wasm-interface",
	"test-utils/client",
	"test-utils/derive",
	"test-utils/runtime",
	"test-utils/runtime/client",
	"test-utils/runtime/transaction-pool",
	# "test-utils/test-runner",
	"test-utils/test-crate",
	"utils/build-script-utils",
	"utils/fork-tree",
	"utils/frame/benchmarking-cli",
	"utils/frame/remote-externalities",
	"utils/frame/frame-utilities-cli",
	"utils/frame/try-runtime/cli",
	"utils/frame/rpc/support",
	"utils/frame/rpc/system",
	"utils/frame/generate-bags",
	#"utils/frame/generate-bags/node-runtime",
	"utils/prometheus",
	"utils/wasm-builder",
]

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2-rfc = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hash-db = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

[patch."https://github.com/mangata-finance/open-runtime-module-library"]
orml-tokens = { path = "../open-runtime-module-library/tokens" }
orml-utilities = { path = "../open-runtime-module-library/utilities" }
orml-traits = { path = "../open-runtime-module-library/traits" }

[patch."https://github.com/mangata-finance/mangata-node"]
mangata-primitives = { path = "../mangata-node/primitives/mangata" }

#patches for orml-tokens dependencies
[patch."https://github.com/mangata-finance/substrate"]
sp-debug-derive = { path = "./primitives/debug-derive" }
sp-tasks = { path = "./primitives/tasks" }
sp-authorship = { path = "./primitives/authorship" }
sp-storage = { path = "./primitives/storage" }
sp-timestamp = { path = "./primitives/timestamp" }
sp-trie = { path = "./primitives/trie" }
sp-block-builder = { path = "./primitives/block-builder" }
sp-keystore = { path = "./primitives/keystore" }
sp-panic-handler = { path = "./primitives/panic-handler" }
sp-database = { path = "./primitives/database" }
sp-transaction-storage-proof = { path = "./primitives/transaction-storage-proof" }
sp-npos-elections-solution-type = { path = "./primitives/npos-elections/solution-type" }
sp-npos-elections = { path = "./primitives/npos-elections" }
sp-serializer = { path = "./primitives/serializer" }
sp-version-proc-macro = { path = "./primitives/version/proc-macro" }
sp-version = { path = "./primitives/version" }
sp-application-crypto = { path = "./primitives/application-crypto" }
sp-wasm-interface = { path = "./primitives/wasm-interface" }
sp-maybe-compressed-blob = { path = "./primitives/maybe-compressed-blob" }
sp-tracing = { path = "./primitives/tracing" }
sp-std = { path = "./primitives/std" }
sp-offchain = { path = "./primitives/offchain" }
sp-state-machine = { path = "./primitives/state-machine" }
sp-keyring = { path = "./primitives/keyring" }
sp-externalities = { path = "./primitives/externalities" }
beefy-primitives = { path = "./primitives/beefy" }
sp-session = { path = "./primitives/session" }
sp-runtime-interface-proc-macro = { path = "./primitives/runtime-interface/proc-macro" }
sp-runtime-interface = { path = "./primitives/runtime-interface" }
sp-core = { path = "./primitives/core" }
sp-arithmetic = { path = "./primitives/arithmetic" }
sp-inherents = { path = "./primitives/inherents" }
sp-runtime = { path = "./primitives/runtime" }
sp-consensus-slots = { path = "./primitives/consensus/slots" }
sp-consensus-babe = { path = "./primitives/consensus/babe" }
sp-consensus-aura = { path = "./primitives/consensus/aura" }
sp-consensus-vrf = { path = "./primitives/consensus/vrf" }
sp-consensus = { path = "./primitives/consensus/common" }
sp-rpc = { path = "./primitives/rpc" }
sp-authority-discovery = { path = "./primitives/authority-discovery" }
sp-transaction-pool = { path = "./primitives/transaction-pool" }
sp-io = { path = "./primitives/io" }
sp-staking = { path = "./primitives/staking" }
sp-finality-grandpa = { path = "./primitives/finality-grandpa" }
sp-api-proc-macro = { path = "./primitives/api/proc-macro" }
sp-api = { path = "./primitives/api" }
sp-blockchain = { path = "./primitives/blockchain" }
sc-allocator = { path = "./client/allocator" }
sc-cli = { path = "./client/cli" }
sc-executor-wasmtime = { path = "./client/executor/wasmtime" }
sc-executor-wasmi = { path = "./client/executor/wasmi" }
sc-executor = { path = "./client/executor" }
sc-executor-common = { path = "./client/executor/common" }
sc-block-builder = { path = "./client/block-builder" }
sc-rpc-server = { path = "./client/rpc-servers" }
sc-keystore = { path = "./client/keystore" }
sc-telemetry = { path = "./client/telemetry" }
sc-network-gossip = { path = "./client/network-gossip" }
sc-state-db = { path = "./client/state-db" }
sc-service = { path = "./client/service" }
sc-client-db = { path = "./client/db" }
sc-rpc-api = { path = "./client/rpc-api" }
sc-basic-authorship = { path = "./client/basic-authorship" }
sc-sync-state-rpc = { path = "./client/sync-state-rpc" }
sc-tracing-proc-macro = { path = "./client/tracing/proc-macro" }
sc-tracing = { path = "./client/tracing" }
sc-chain-spec = { path = "./client/chain-spec" }
sc-chain-spec-derive = { path = "./client/chain-spec/derive" }
sc-light = { path = "./client/light" }
sc-offchain = { path = "./client/offchain" }
sc-utils = { path = "./client/utils" }
beefy-gadget = { path = "./client/beefy" }
beefy-gadget-rpc = { path = "./client/beefy/rpc" }
sc-proposer-metrics = { path = "./client/proposer-metrics" }
sc-consensus-slots = { path = "./client/consensus/slots" }
# sc-consensus-babe = { path = "./client/consensus/babe" }
# sc-consensus-babe-rpc = { path = "./client/consensus/babe/rpc" }
sc-consensus-epochs = { path = "./client/consensus/epochs" }
sc-consensus-uncles = { path = "./client/consensus/uncles" }
sc-consensus-aura = { path = "./client/consensus/aura" }
sc-consensus = { path = "./client/consensus/common" }
sc-rpc = { path = "./client/rpc" }
sc-authority-discovery = { path = "./client/authority-discovery" }
sc-informant = { path = "./client/informant" }
sc-transaction-pool = { path = "./client/transaction-pool" }
sc-transaction-pool-api = { path = "./client/transaction-pool/api" }
sc-finality-grandpa = { path = "./client/finality-grandpa" }
sc-finality-grandpa-rpc = { path = "./client/finality-grandpa/rpc" }
sc-client-api = { path = "./client/api" }
sc-peerset = { path = "./client/peerset" }
sc-network = { path = "./client/network" }
substrate-test-client = { path = "./test-utils/client" }
substrate-wasm-builder = { path = "./utils/wasm-builder" }
substrate-prometheus-endpoint = { path = "./utils/prometheus" }
substrate-build-script-utils = { path = "./utils/build-script-utils" }
fork-tree = { path = "./utils/fork-tree" }
frame-benchmarking-cli = { path = "./utils/frame/benchmarking-cli" }
remote-externalities = { path = "./utils/frame/remote-externalities" }
try-runtime-cli = { path = "./utils/frame/try-runtime/cli" }
substrate-frame-rpc-system = { path = "./utils/frame/rpc/system" }
pallet-mmr-primitives = { path = "./frame/merkle-mountain-range/primitives" }
pallet-mmr = { path = "./frame/merkle-mountain-range" }
pallet-mmr-rpc = { path = "./frame/merkle-mountain-range/rpc" }
pallet-transaction-payment = { path = "./frame/transaction-payment" }
pallet-transaction-payment-rpc = { path = "./frame/transaction-payment/rpc" }
pallet-transaction-payment-rpc-runtime-api = { path = "./frame/transaction-payment/rpc/runtime-api" }
pallet-authorship = { path = "./frame/authorship" }
pallet-identity = { path = "./frame/identity" }
pallet-timestamp = { path = "./frame/timestamp" }
pallet-membership = { path = "./frame/membership" }
pallet-babe = { path = "./frame/babe" }
pallet-offences = { path = "./frame/offences" }
pallet-nicks = { path = "./frame/nicks" }
pallet-im-online = { path = "./frame/im-online" }
pallet-utility = { path = "./frame/utility" }
pallet-sudo = { path = "./frame/sudo" }
pallet-bags-list = { path = "./frame/bags-list" }
frame-system = { path = "./frame/system" }
frame-system-rpc-runtime-api = { path = "./frame/system/rpc/runtime-api" }
frame-support-procedural = { path = "./frame/support/procedural" }
frame-support-procedural-tools = { path = "./frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "./frame/support/procedural/tools/derive" }
frame-support = { path = "./frame/support" }
pallet-aura = { path = "./frame/aura" }
beefy-merkle-tree = { path = "./frame/beefy-mmr/primitives" }
pallet-beefy-mmr = { path = "./frame/beefy-mmr" }
pallet-vesting = { path = "./frame/vesting" }
frame-benchmarking = { path = "./frame/benchmarking" }
pallet-democracy = { path = "./frame/democracy" }
frame-executive = { path = "./frame/executive" }
pallet-treasury = { path = "./frame/treasury" }
pallet-indices = { path = "./frame/indices" }
pallet-election-provider-multi-phase = { path = "./frame/election-provider-multi-phase" }
pallet-tips = { path = "./frame/tips" }
frame-try-runtime = { path = "./frame/try-runtime" }
pallet-beefy = { path = "./frame/beefy" }
pallet-collective = { path = "./frame/collective" }
pallet-session = { path = "./frame/session" }
pallet-bounties = { path = "./frame/bounties" }
pallet-elections-phragmen = { path = "./frame/elections-phragmen" }
pallet-scheduler = { path = "./frame/scheduler" }
pallet-authority-discovery = { path = "./frame/authority-discovery" }
frame-election-provider-support = { path = "./frame/election-provider-support" }
pallet-staking-reward-curve = { path = "./frame/staking/reward-curve" }
pallet-staking = { path = "./frame/staking" }
pallet-grandpa = { path = "./frame/grandpa" }
pallet-proxy = { path = "./frame/proxy" }
pallet-balances = { path = "./frame/balances" }
pallet-multisig = { path = "./frame/multisig" }

